# PlateViewer

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  config.py  heatmaps.py  image.py  install_desktop.sh  launch.sh  montage.py  paths.py  plate.py  pyproject.toml  requirements.txt
plateviewer/: app.py  app_dash.py  app_streamlit.py  heatmaps.py  image.py  montage.py  paths.py  plate.py
